# edge

./: LICENSE  README.md  pyproject.toml  train.py
runs/detect/train/: args.yaml  results.csv
scripts/: run.sh
src/: config.py  frontend.js  main.py  server.py  web_template.html
src/client/: client.py
src/core/camera/: __init__.py
